k8s/ingress-resource-aks-store.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-front-ingress
  namespace: aks-store
spec:
  ingressClassName: nginx-internal
  rules:
  - host: store-front.private.contoso.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: store-front
            port:
              number: 80
